# Auto-birthday

./: README.md  app.py  birthday.json  birthday_sms_log_2025-04-09.txt  index.html  main.php  main.py  pyproject.toml  requirements.txt
