[project]
name = "auto-birthday"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apscheduler>=3.11.0",
    "numpy>=2.0.2",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "python-dotenv>=1.1.0",
    "schedule>=1.2.2",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.1",
    "twilio>=9.6.3",
]
